# pragma

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  serve.py
src/: api_server.py  main.py  mcp_server.py
src/adapters/: embeddings.py  gitlab.py
src/agents/: __init__.py  continuous_indexer.py  mr_reviewer.py
src/indexer/: core.py
tests/: test_api_server.py  test_continuous_indexer.py  test_embeddings.py  test_gitlab_adapter.py  test_indexer.py  test_mr_reviewer.py
