[project]
name = "pragma"
version = "0.1.0"
description = "Historical GitLab MR database with semantic search API"
requires-python = ">=3.10, <3.13"
dependencies = [
    "llama-index",
    "google-generativeai",
    "chromadb",
    "python-dotenv",
    "typer",
    "PyYAML",
    "llama-index-embeddings-google-genai",
    "llama-index-vector-stores-chroma",
    "python-gitlab>=8.1.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "llama-index-embeddings-huggingface>=0.6.1",
    "pydantic-ai>=0.0.30",
    "anyio>=4.0.0",
    "filelock>=3.25.0",
]

[project.scripts]
pragma = "main:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["adapters", "agents", "indexer"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]
